<package>
  <name>topological_mapper</name>
  <version>0.0.1</version>
  <description>topological_mapper</description>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/topological_mapper</url> -->
  <!-- <url type="bugtracker"></url> -->

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>opencv2</run_depend>

</package>
